# opnsense-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile.example  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  sync-public.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: routes.md  services.md
specs/001-opnsense-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-opnsense-mcp-server/checklists/: requirements.md
specs/001-opnsense-mcp-server/contracts/: dhcp.md  dns.md  firewall.md  interfaces.md  system.md
src/opnsense_mcp/: __main__.py  _validators.py  client.py  server.py
src/opnsense_mcp/tools/: dhcp.py  dns.py  firewall.py  ids.py  interfaces.py  routes.py  services.py  system.py
tests/: conftest.py
tests/contract/: test_tool_schemas.py
tests/integration/: conftest.py  test_dns.py  test_firewall.py  test_ids.py  test_network.py  test_system.py
tests/unit/: test_logging.py  test_server.py  test_startup.py  test_validators.py
tests/unit/tools/: test_dhcp.py  test_dns.py  test_firewall.py  test_ids.py  test_interfaces.py  test_routes.py  test_services.py  test_system.py
